# factstore

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_BRIEF.md  README.md  RELEASE_NOTES.md  mkdocs.yml  release-plz.toml
.agents/skills/factstore-implementation/: SKILL.md
.agents/skills/factstr-implementation/: SKILL.md
.github/workflows/: ci.yml  publish-github-release.yml  publish-node.yml  publish-rust.yml  release-rust.yml
docs/: core-concepts.md  examples.md  getting-started.md  index.md  live-subscriptions.md  node-typescript.md  reference.md  stores.md  streams.md
examples/account-projection/: Cargo.toml
examples/account-projection/src/: main.rs
examples/bank-slices-cli/: Cargo.toml
examples/bank-slices-cli/src/: main.rs
examples/basic-memory/: Cargo.toml
examples/basic-memory/src/: main.rs
examples/live-subscriptions/src/: main.rs
factstore/: Cargo.toml
factstore-conformance/: Cargo.toml
factstore-conformance/src/: append.rs  conditional_append.rs  durable_streams.rs  lib.rs  payload_predicates.rs  projection_updates.rs  query.rs  support.rs
factstore-memory/: Cargo.toml
factstore-memory/src/: lib.rs  memory_store.rs  stream_registry.rs  subscription_registry.rs
factstore-memory/tests/: append.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  stream_dispatch.rs  streams.rs  subscription_dispatch.rs  subscriptions.rs
factstore-postgres/: Cargo.toml
factstore-postgres/src/: lib.rs  postgres_store.rs  query_sql.rs  stream_registry.rs  subscription_registry.rs
factstore-postgres/tests/: append.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  stream_dispatch.rs  streams.rs  subscription_dispatch.rs  subscriptions.rs
factstore-postgres/tests/support/: mod.rs
factstore-sqlite/: Cargo.toml
factstore-sqlite/src/: connection.rs  schema.rs  sqlite_store.rs  stream_registry.rs
factstore-sqlite/tests/: append.rs  bootstrap.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  streams.rs
factstore-sqlite/tests/support/: mod.rs
factstore/src/: append_result.rs  event_filter.rs  event_query.rs  event_store.rs  event_subscription.rs  lib.rs  live_subscription.rs  new_event.rs  subscription_handler.rs
factstr/: Cargo.toml  README.md
factstr-conformance/: Cargo.toml
factstr-conformance/src/: append.rs  conditional_append.rs  durable_streams.rs  lib.rs  payload_predicates.rs  projection_updates.rs  query.rs  support.rs
factstr-interop/: Cargo.toml
factstr-interop/src/: interop_append_result.rs  interop_conditional_append_conflict.rs  interop_error.rs  interop_event_filter.rs  interop_event_query.rs  interop_event_record.rs  interop_new_event.rs  interop_query_result.rs  lib.rs
factstr-interop/tests/: conversions.rs
factstr-memory/: Cargo.toml  README.md
factstr-memory/src/: memory_store.rs  query_match.rs  stream_registry.rs
factstr-memory/tests/: append.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  stream_dispatch.rs  streams.rs
factstr-node/: Cargo.toml  NPM.md  README.md  factstr-node.darwin-arm64.node  index.d.ts  index.js  package.json
factstr-node/npm/darwin-arm64/: README.md  factstr-node-darwin-arm64-0.1.0.tgz  factstr-node.darwin-arm64.node  package.json
factstr-node/npm/darwin-x64/: README.md  package.json
factstr-node/npm/linux-x64-gnu/: README.md  (+1 more)
factstr-node/scripts/: build-prebuilt-package.mjs  pack-prebuilt-package.mjs  prebuilt-target.mjs
factstr-node/smoke/: .npmrc  README.md  append_query_append_if.ts  direct_native_durable_failure.ts  index.ts  install-packed.mjs  live_streams.ts  memory_durable_streams.ts  native_package.ts  package.json  postgres_store.ts  sqlite_database_paths.ts  sqlite_durable_streams.ts  tsconfig.json  wait_for_delivery.ts
factstr-node/src/: append_if_outcome.rs  durable_stream.rs  event_stream_subscription.rs  factstr_memory_store.rs  factstr_postgres_store.rs  factstr_sqlite_store.rs  lib.rs  node_request.rs  node_result.rs  sequence_number_value.rs  stream_callback.rs  stream_error.rs
factstr-node/tests/: memory_store.rs  postgres_store.rs  sqlite_store.rs
factstr-postgres/: Cargo.toml  README.md
factstr-postgres/src/: lib.rs  postgres_store.rs  query_sql.rs  stream_registry.rs
factstr-postgres/tests/: append.rs  bootstrap.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  stream_dispatch.rs  streams.rs  tokio_runtime.rs
factstr-postgres/tests/support/: mod.rs
factstr-sqlite/: Cargo.toml  README.md
factstr-sqlite/src/: lib.rs  payload_match.rs  schema.rs  sqlite_store.rs  stream_registry.rs
factstr-sqlite/tests/: append.rs  bootstrap.rs  conditional_append.rs  durable_streams.rs  payload_match.rs  query.rs  streams.rs
factstr-sqlite/tests/support/: mod.rs
factstr/src/: append_result.rs  durable_stream.rs  event_record.rs  event_store.rs  event_stream.rs  lib.rs  query_result.rs  stream_handler.rs
scripts/: check-node-version-sync.mjs  check-rust-publish-plan.mjs  prepare-rust-readmes.mjs  wait-for-crates-io-version.mjs
(+13 files in other folders)
