[package]
name = "factstore-sqlite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "SQLite bootstrap crate for embedded FACTSTR persistence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstore.git"
homepage = "https://factstore.ricofritzsche.me"
readme = "../README.md"
keywords = ["eventstore", "eventsourcing", "sqlite", "embedded", "facts"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
factstore = { version = "0.1.0", path = "../factstore" }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
factstore-conformance = { path = "../factstore-conformance" }
