[package]
name = "factstr-memory"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "In-memory FACTSTR store for tests, examples, and local development."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "README.md"
keywords = ["eventstore", "eventsourcing", "facts", "memory", "testing"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
factstr = { version = "0.4.0", path = "../factstr" }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
factstr-conformance = { path = "../factstr-conformance" }
