[package]
name = "factstr-postgres"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "PostgreSQL store for FACTSTR with append, query, streams, and durable streams."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "README.md"
keywords = ["eventstore", "eventsourcing", "facts", "postgres", "sqlx"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
factstr = { version = "0.4.1", path = "../factstr" }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "time"] }
time = "0.3"
tokio = { version = "1", features = ["rt"] }
url = "2"

[dev-dependencies]
factstr-conformance = { path = "../factstr-conformance" }
url = "2"
