[package]
name = "factstr-sqlite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "SQLite bootstrap crate for embedded FACTSTR persistence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.ricofritzsche.me"
readme = "../README.md"
keywords = ["eventstore", "eventsourcing", "sqlite", "embedded", "facts"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
factstr = { version = "0.1.0", path = "../factstr" }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
factstr-conformance = { path = "../factstr-conformance" }
