[package]
name = "factstr"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Rust event store contract for append-only facts, streams, and command context consistency."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricofritzsche/factstr.git"
homepage = "https://factstr.com"
readme = "README.md"
keywords = ["eventstore", "eventsourcing", "facts", "streams", "database"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
time = "0.3"
